--- a/profiles.html
+++ b/profiles.html
@@ -31,7 +31,7 @@
 						</p>
 						<p>
 							<strong>Bio</strong></br />
-							That slight smile, those eyes bright with intelligence and ambition. Josef Stalin grew from humble origins as the son of a cobbler, to lead the most murderous regime in the history of human civilisations. That’s right, this fitty snuffed out the lives of more than 61 million other humans, or as the man himself said: “One death is a tragedy; a million deaths is a statistic.”
+							That slight smile, those eyes bright with intelligence and ambition. Josef Stalin grew from humble origins as the son of a cobbler, to lead the most murderous regime in the history of human civilisations. That's right, this fitty snuffed out the lives of more than 61 million other humans, or as the man himself said: "One death is a tragedy; a million deaths is a statistic."
 						</p>
 					</div>
 					<img src="dictators/stalin/youngstalin01.jpg" />
